--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,21 @@
   ],
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Run\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
-    }
+    },
+    "files": [
+      "src/Steps/Helper/helpers.php"
+    ]
   },
   "require": {
-    "symfony/console": "^5.4"
+    "symfony/console": "^5.4",
+    "symfony/var-dumper": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
