--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-  "name": "baselrabia/php_playground",
+  "name": "php-run/run",
   "description": "This package holds the content of play ground for php including source code, references and more",
   "minimum-stability": "stable",
-  "license": "proprietary",
+  "license": "MIT",
+  "type": "project",
   "authors": [
     {
       "name": "Basel Rabia",
@@ -11,23 +12,24 @@
   ],
   "autoload": {
     "psr-4": {
-      "App\\": "app/",
-      "Run\\": "src/"
+      "App\\": "app/"
     }
   },
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
-    },
-    "files": [
-      "src/Steps/Helper/helpers.php"
-    ]
+    }
   },
   "require": {
-    "symfony/console": "^5.4",
-    "symfony/var-dumper": "^5.4"
+    "php-run/framework": "@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
-  }
+  },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "src"
+    }
+  ]
 }
